fix: Align project logo on hub site item card

--- a/_sass/open-project-base.scss
+++ b/_sass/open-project-base.scss
@@ -184,7 +184,6 @@ a {
 
         display: flex;
         flex-flow: column nowrap;
-        align-items: center;
         justify-content: center;
       }
       .project-title {
